src/test/ui/rfc-2632-const-trait-impl/call-generic-method-fail.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/call-generic-method-fail.rs:7:5
   |
LL |     *t == *t
   |     ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
